keycloak-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 2 # Chạy 2 bản sao, mỗi bản sao sẽ được lên lịch trên 1 worker node
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak-headless"
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      affinity:
        podAntiAffinity:
          # Ưu tiên không xếp 2 pod trên cùng 1 node
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - keycloak
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0 # Luôn dùng phiên bản cụ thể cho production
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 1
